--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -1,15 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.alien.FXMLController">
+<BorderPane prefHeight="469.0" prefWidth="462.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.alien.FXMLController">
    <top>
-      <Label text="Alien Translator" BorderPane.alignment="CENTER">
+      <Label text="Lab 2 - Alien Translator" textAlignment="CENTER" BorderPane.alignment="CENTER">
          <font>
-            <Font name="Courier New Bold" size="39.0" />
+            <Font name="Courier New Bold" size="18.0" />
          </font>
+         <BorderPane.margin>
+            <Insets top="15.0" />
+         </BorderPane.margin>
       </Label>
    </top>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label prefHeight="18.0" prefWidth="67.0" text="Alien text">
+                     <HBox.margin>
+                        <Insets left="5.0" top="27.0" />
+                     </HBox.margin>
+                  </Label>
+                  <TextField fx:id="inserimentoId" promptText="Insert text...">
+                     <HBox.margin>
+                        <Insets left="20.0" top="27.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button fx:id="traduciId" mnemonicParsing="false" onAction="#traduzioneHandle" text="Translate">
+                     <HBox.margin>
+                        <Insets left="20.0" top="27.0" />
+                     </HBox.margin>
+                  </Button>
+                  <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                     <HBox.margin>
+                        <Insets left="40.0" />
+                     </HBox.margin>
+                     <image>
+                        <Image url="@alien.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </HBox>
+            <TextArea fx:id="risultatoId" prefHeight="200.0" prefWidth="200.0" promptText="Welcome to Alien Dictionary v2022...">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </TextArea>
+            <Button fx:id="pulisciId" mnemonicParsing="false" onAction="#clearHandle" text="Clear Text">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="295.0" top="10.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
